--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "pnpm": "^9.1.1",
     "postcss": "^8.4.38",
     "react": "^18.2.0",
+    "react-360-view": "^0.1.3",
     "react-bootstrap": "^2.10.2",
     "react-dom": "^18.2.0",
     "react-icons": "^5.2.1",
@@ -24,7 +25,9 @@
     "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^6.23.1",
     "react-scroll": "^1.9.0",
+    "react-slick": "^0.30.2",
     "react-vertical-timeline-component": "^3.6.0",
+    "slick-carousel": "^1.8.1",
     "tailwindcss": "^3.4.3",
     "vertical-timeline-component-for-react": "^1.0.7",
     "web-vitals": "^4.0.0"
