--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@heroicons/react": "^2.1.3",
     "autoprefixer": "^10.4.19",
     "bootstrap": "^5.3.3",
     "daisyui": "^4.11.1",
